edited openInFileExplorer method of FileSystemAccessor